--- a/index.html
+++ b/index.html
@@ -120,9 +120,12 @@
                             <span class="whitespace-nowrap">전화 상담</span>
                             <span class="whitespace-nowrap ml-1">(010-6702-9644)</span>
                         </a>
-                        <button id="expertConsultationButton" class="action-button !mt-0 !bg-white !text-pink-600 !border-2 !border-pink-600 hover:!bg-pink-50 text-base w-full sm:w-auto sm:min-w-[200px] whitespace-nowrap">
-                            문의하기 페이지로 이동 →
-                        </button>
+                        <a href="http://pf.kakao.com/_IakxkG/chat" target="_blank" rel="noopener noreferrer" class="action-button !mt-0 !bg-white !text-pink-600 !border-2 !border-pink-600 hover:!bg-pink-50 text-base w-full sm:w-auto sm:min-w-[200px] whitespace-nowrap flex items-center justify-center">
+                            <svg class="w-5 h-5 mr-2 flex-shrink-0" fill="currentColor" viewBox="0 0 24 24">
+                                <path d="M12 3c5.799 0 10.5 3.664 10.5 8.185 0 4.52-4.701 8.184-10.5 8.184a13.5 13.5 0 0 1-1.727-.11l-4.408 2.883c-.501.265-.678.236-.472-.413l.892-3.678c-2.88-1.46-4.785-3.99-4.785-6.866C1.5 6.664 6.201 3 12 3z"/>
+                            </svg>
+                            카카오톡 상담하기 →
+                        </a>
                     </div>
                     <p class="text-sm text-gray-600 mt-4">15분 무료 상담으로 더 깊이 있는 진단과 맞춤형 전략을 받아보세요.</p>
                 </div>
